kube/knote.yaml
apiVersion: v1
kind: Service
metadata:
  name: knote
spec:
  selector:
    app: knote
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: knote
  template:
    metadata:
      labels:
        app: knote
    spec:
      containers:
        - name: knote
          image: registry.gitlab.com/reapbenefit/rb-submission-api/knote-js:1bdd57d1
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
      imagePullSecrets:
        - name: gitlab
