kube/rb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rb-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - rb-ingress.study-circle.in
    secretName: studycircletls
  rules:
  - host: rb-ingress.study-circle.in
    http:
      paths:
      - backend:
          serviceName: webapp
          servicePort: 80
        path: /
      - backend:
          serviceName: knote
          servicePort: 80
        path: /api-docs(/|$)(.*)
      - backend:
          serviceName: knote
          servicePort: 80
        path: /api/v1(/|$)(.*)
      - backend:
          serviceName: webapp
          servicePort: 80
        path: /formlist(/|$)(.*)
      - backend:
          serviceName: keycloak
          servicePort: 8080
        path: /keycloak(/|$)(.*)
      - backend:
          serviceName: keycloak
          servicePort: 8080
        path: /auth(/|$)(.*)
